--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="priority-matrix">
       <img src="./eisenhower-matrix.jpg">
       <a
       class="more-inf"
@@ -33,9 +33,9 @@
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
-          <input type="text">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <input type="text" class="task">
+          <button class="btn-edit">Edit</button>
+          <button class="btn-delete"><img src="./remove.svg"></button>
         </li>
         <li class="edit-mode">
           <input type="checkbox">
@@ -43,9 +43,10 @@
           <input
             type="text"
             value="Go Shopping"
-            class="task">
-          <button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg"></button>
+            class="task"
+            >
+          <button class="btn-edit">Save</button>
+          <button class="btn-delete"><img src="./remove.svg"></button>
         </li>
       </ul>
       <h3>Completed</h3>
@@ -54,8 +55,8 @@
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
           <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">z<img src="./remove.svg"></button>
+          <button class="btn-edit">Edit</button>
+          <button class="btn-delete"><img src="./remove.svg"></button>
         </li>
       </ul>
     </div>
