--- a/index.html
+++ b/index.html
@@ -17,46 +17,46 @@
       href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?
       </a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
-        <label for="new-task">Add Item</label>
+    <div class="app-page">
+      <p id="add-elem">
+        <label class="new-task-label" for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input
             id="new-task"
-            class="task"
+            class="task all-inputs"
             type="text">
-          <button>Add</button>
+          <button class="btn-total btn-add">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
+      <h3 class="task-list-name">Todo</h3>
       <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
+        <li class="task-list">
+          <input type="checkbox" class="total-input marker">
           <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="btn-edit">Edit</button>
-          <button class="btn-delete"><img src="./remove.svg"></button>
+          <input type="text" class="task total-input all-inputs">
+          <button class="btn-edit btn-total">Edit</button>
+          <button class="btn-delete btn-total"><img src="./remove.svg" class="btn-remove"></button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
+        <li class="edit-mode task-list">
+          <input type="checkbox" class="total-input marker">
+          <label class="task change-task-text">Go Shopping</label>
           <input
             type="text"
             value="Go Shopping"
-            class="task"
+            class="task total-input all-inputs"
             >
-          <button class="btn-edit">Save</button>
-          <button class="btn-delete"><img src="./remove.svg"></button>
+          <button class="btn-edit btn-total">Save</button>
+          <button class="btn-delete btn-total"><img src="./remove.svg" class="btn-remove"></button>
         </li>
       </ul>
-      <h3>Completed</h3>
+      <h3 class="task-list-name">Completed</h3>
       <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
+        <li class="task-list">
+          <input type="checkbox" class="total-input marker" checked>
           <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="btn-edit">Edit</button>
-          <button class="btn-delete"><img src="./remove.svg"></button>
+          <input type="text" class="task total-input all-inputs">
+          <button class="btn-edit btn-total">Edit</button>
+          <button class="btn-delete btn-total"><img src="./remove.svg" class="btn-remove"></button>
         </li>
       </ul>
     </div>
