--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <ul id="incomplete-tasks">
         <li class="task-list">
           <input type="checkbox" class="total-input marker">
-          <label class="task">Pay Bills</label>
+          <label class="task change-task-text">Pay Bills</label>
           <input type="text" class="task total-input all-inputs">
           <button class="btn-edit btn-total">Edit</button>
           <button class="btn-delete btn-total"><img src="./remove.svg" class="btn-remove"></button>
