--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
       charset="utf-8">
   </head>
   <body>
-    <div class="priority-matrix">
+    <header class="priority-matrix">
       <img src="./eisenhower-matrix.jpg" class="image">
       <a
       class="more-inf"
       href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?
       </a>
-    </div>
-    <div class="app-page">
+    </header>
+    <main class="app-page">
       <p id="add-elem">
         <label class="new-task-label" for="new-task">Add Item</label>
         <div class="task-row-wrapper">
@@ -59,7 +59,7 @@
           <button class="btn-delete btn-total"><img src="./remove.svg" class="btn-remove image"></button>
         </li>
       </ul>
-    </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
