refactor: add attributes alt for multimedia according to rule 1.2 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header class="priority-matrix">
-      <img src="./eisenhower-matrix.jpg" class="image">
+      <img src="./eisenhower-matrix.jpg" alt="The Eisenhower Matrix method of operation" class="image">
       <a
       class="more-inf"
       href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?
@@ -35,7 +35,7 @@
           <label class="task change-task-text">Pay Bills</label>
           <input type="text" class="task total-input all-inputs">
           <button class="btn-edit btn-total">Edit</button>
-          <button class="btn-delete btn-total"><img src="./remove.svg" class="btn-remove image"></button>
+          <button class="btn-delete btn-total"><img src="./remove.svg" alt="Button delete" class="btn-remove image"></button>
         </li>
         <li class="edit-mode task-list">
           <input type="checkbox" class="total-input marker">
@@ -46,7 +46,7 @@
             class="task total-input all-inputs"
             >
           <button class="btn-edit btn-total">Save</button>
-          <button class="btn-delete btn-total"><img src="./remove.svg" class="btn-remove image"></button>
+          <button class="btn-delete btn-total"><img src="./remove.svg" alt="Button delete" class="btn-remove image"></button>
         </li>
       </ul>
       <h3 class="task-list-name">Completed</h3>
@@ -56,7 +56,7 @@
           <label class="task change-task-text">See the Doctor</label>
           <input type="text" class="task total-input all-inputs">
           <button class="btn-edit btn-total">Edit</button>
-          <button class="btn-delete btn-total"><img src="./remove.svg" class="btn-remove image"></button>
+          <button class="btn-delete btn-total"><img src="./remove.svg" alt="Button delete" class="btn-remove image"></button>
         </li>
       </ul>
     </main>
